k8s/backend/0-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: findyourjob-api
spec:
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  minReadySeconds: 5
  selector:
    matchLabels:
      app: findyourjob-api
  template:
    metadata:
      labels:
        app: findyourjob-api
    spec:
      imagePullSecrets:
        - name: docker-config-json
      containers:
        - name: findyourjob-api
          image: ghcr.io/nguyenphucbao68/findyourjob-api:latest
          # image: findyourjob-api:latest
          command:
            - /bin/sh
            - -c
            - yarn migrate:db --accept-data-loss && dumb-init node dist/server.js
          imagePullPolicy: Always
          # imagePullPolicy: Never
          resources:
            # requests:
            #   cpu: '500m'
            #   memory: '1024Mi'
            # limits:
            #   cpu: '1000m'
            #   memory: '2048Mi'
            requests:
              cpu: '100m'
              memory: '528Mi'
            limits:
              cpu: '300m'
              memory: '528Mi'
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: findyourjob-api-svc
spec:
  type: NodePort
  selector:
    app: findyourjob-api
  ports:
    - port: 4000
      targetPort: 4000
      # nodePort: 30001
