k8s/backend/2-kafka-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: findyourjob-kafka-consumer
spec:
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  minReadySeconds: 5
  selector:
    matchLabels:
      app: findyourjob-kafka-consumer
  template:
    metadata:
      labels:
        app: findyourjob-kafka-consumer
    spec:
      imagePullSecrets:
        - name: docker-config-json
      containers:
        - name: findyourjob-kafka-consumer
          image: ghcr.io/nguyenphucbao68/findyourjob-kafka-consumer:latest
          # image: findyourjob-kafka-consumer:latest
          command:
            - /bin/sh
            - -c
            - dumb-init node dist/app.js
          imagePullPolicy: Always
          # imagePullPolicy: Never
          resources:
            requests:
              cpu: '100m'
              memory: '528Mi'
            limits:
              cpu: '300m'
              memory: '528Mi'
          ports:
            - containerPort: 4001

---
apiVersion: v1
kind: Service
metadata:
  name: findyourjob-kafka-consumer-svc
spec:
  type: NodePort
  selector:
    app: findyourjob-kafka-consumer
  ports:
    - port: 4001
      targetPort: 4001
      # nodePort: 30001
