k8s/backend/1-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: findyourjob-api-ingress
spec:
  rules:
    - host: api.findyourjob.com
      http:
        paths:
          - backend:
              service:
                name: findyourjob-api-svc
                port:
                  number: 4000
            path: /
            pathType: Prefix
